200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=tCokruw2kVY=

--- a/korea.assembly.go.kr/cfdb17e6529823a69c45766521c9d1f0519a3fc5.html
+++ b/korea.assembly.go.kr/cfdb17e6529823a69c45766521c9d1f0519a3fc5.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.minsim.or.kr/xe" target="_blank">http://www.minsim.or.kr/xe</a></td>
+							<td style="word-break:break-all;"><a href="http://www.minsim.or.kr/xe" target="_blank">http://www.minsim.or.kr/xe</a></td>
 						</tr>
 					</tbody>
 				</table>
