--- a/korea.assembly.go.kr/be2b3373a9e948120f2a4b7aa93999d825a823ff.html
+++ b/korea.assembly.go.kr/be2b3373a9e948120f2a4b7aa93999d825a823ff.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
