--- a/korea.assembly.go.kr/2977aa2c3866e89a2b314e7d078bd9290c095e97.html
+++ b/korea.assembly.go.kr/2977aa2c3866e89a2b314e7d078bd9290c095e97.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
