200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=pxq7UWSQR4s=

--- a/korea.assembly.go.kr/79d490723485ad3fd11a2eb6194ca61a81747b2a.html
+++ b/korea.assembly.go.kr/79d490723485ad3fd11a2eb6194ca61a81747b2a.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/alpha-song" target="_blank">http://blog.naver.com/alpha-song</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/alpha-song" target="_blank">http://blog.naver.com/alpha-song</a></td>
 						</tr>
 					</tbody>
 				</table>
