--- a/korea.assembly.go.kr/d5ad2fe2db311fce3de9257b3db1e9e24064b727.html
+++ b/korea.assembly.go.kr/d5ad2fe2db311fce3de9257b3db1e9e24064b727.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.peacesong1.blog.me" target="_blank">http://www.peacesong1.blog.me</a></td>
+							<td style="word-break:break-all;"><a href="http://www.peacesong1.blog.me" target="_blank">http://www.peacesong1.blog.me</a></td>
 						</tr>
 					</tbody>
 				</table>
