--- a/korea.assembly.go.kr/a89579159bed0fffb7482a8d8da68c547fe0cfed.html
+++ b/korea.assembly.go.kr/a89579159bed0fffb7482a8d8da68c547fe0cfed.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
