--- a/korea.assembly.go.kr/8745b5c22751411f5ae416bef0064edbea60505f.html
+++ b/korea.assembly.go.kr/8745b5c22751411f5ae416bef0064edbea60505f.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
