--- a/korea.assembly.go.kr/4e114dd4aaa4125ebd1efe6b7e37d509f77cb8c6.html
+++ b/korea.assembly.go.kr/4e114dd4aaa4125ebd1efe6b7e37d509f77cb8c6.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://icheonsarang.com/" target="_blank">http://icheonsarang.com/</a></td>
+							<td style="word-break:break-all;"><a href="http://icheonsarang.com/" target="_blank">http://icheonsarang.com/</a></td>
 						</tr>
 					</tbody>
 				</table>
