--- a/korea.assembly.go.kr/55730bb6f885a1ad5022ed9231c8dc1c79e41e8f.html
+++ b/korea.assembly.go.kr/55730bb6f885a1ad5022ed9231c8dc1c79e41e8f.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.suhchungwon.com" target="_blank">http://www.suhchungwon.com</a></td>
+							<td style="word-break:break-all;"><a href="http://www.suhchungwon.com" target="_blank">http://www.suhchungwon.com</a></td>
 						</tr>
 					</tbody>
 				</table>
