200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=AX48iGj6Bhc=

--- a/korea.assembly.go.kr/0bf9a7c004fc3545302b6f69f8c9c8ae061b034f.html
+++ b/korea.assembly.go.kr/0bf9a7c004fc3545302b6f69f8c9c8ae061b034f.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.sulhoon.com" target="_blank">http://www.sulhoon.com</a></td>
+							<td style="word-break:break-all;"><a href="http://www.sulhoon.com" target="_blank">http://www.sulhoon.com</a></td>
 						</tr>
 					</tbody>
 				</table>
