--- a/korea.assembly.go.kr/9844b0d96c197c8d46ba4ac12f6b2c4ffadcebfc.html
+++ b/korea.assembly.go.kr/9844b0d96c197c8d46ba4ac12f6b2c4ffadcebfc.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
