200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=G%2BA2Bz3w%2B/w=

--- a/korea.assembly.go.kr/390719eed2d13a89157b3fa53e65867751abb973.html
+++ b/korea.assembly.go.kr/390719eed2d13a89157b3fa53e65867751abb973.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://wishjeju.kr" target="_blank">http://wishjeju.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://wishjeju.kr" target="_blank">http://wishjeju.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
