--- a/korea.assembly.go.kr/fe630fa11e82ff0a0f8a601794847f4e26092bf5.html
+++ b/korea.assembly.go.kr/fe630fa11e82ff0a0f8a601794847f4e26092bf5.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.wonhyeyoung.or.kr" target="_blank">http://www.wonhyeyoung.or.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://www.wonhyeyoung.or.kr" target="_blank">http://www.wonhyeyoung.or.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
