--- a/korea.assembly.go.kr/2422ca8e57708a7983f71c9cf28030c2263e0088.html
+++ b/korea.assembly.go.kr/2422ca8e57708a7983f71c9cf28030c2263e0088.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.woosangho.net" target="_blank">http://www.woosangho.net</a></td>
+							<td style="word-break:break-all;"><a href="http://www.woosangho.net" target="_blank">http://www.woosangho.net</a></td>
 						</tr>
 					</tbody>
 				</table>
