200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=i77k/9J5ZN0=

--- a/korea.assembly.go.kr/8844a8e4d979ee28ea6403a55cbaf7292fd0fdee.html
+++ b/korea.assembly.go.kr/8844a8e4d979ee28ea6403a55cbaf7292fd0fdee.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://우원식.kr" target="_blank">http://우원식.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://우원식.kr" target="_blank">http://우원식.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
