--- a/korea.assembly.go.kr/11a73d8f28b771b050e4badfdcd698c48c8d5799.html
+++ b/korea.assembly.go.kr/11a73d8f28b771b050e4badfdcd698c48c8d5799.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.ysj.or.kr" target="_blank">http://www.ysj.or.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://www.ysj.or.kr" target="_blank">http://www.ysj.or.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
