200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=Pt0/1A1YMS4=

--- a/korea.assembly.go.kr/0a6fce95c7f84e1bb44974ab5e25433e2c27cbab.html
+++ b/korea.assembly.go.kr/0a6fce95c7f84e1bb44974ab5e25433e2c27cbab.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/bluesky435" target="_blank">http://blog.naver.com/bluesky435</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/bluesky435" target="_blank">http://blog.naver.com/bluesky435</a></td>
 						</tr>
 					</tbody>
 				</table>
