200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=IGCRWtZbC%2Bc=

--- a/korea.assembly.go.kr/f0c68b0140f2eba559423e7b147929d54664d4d9.html
+++ b/korea.assembly.go.kr/f0c68b0140f2eba559423e7b147929d54664d4d9.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.eideabank.co.kr" target="_blank">http://www.eideabank.co.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://www.eideabank.co.kr" target="_blank">http://www.eideabank.co.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
