--- a/korea.assembly.go.kr/485c42145f19e771f604a083b7081ecb29ae511d.html
+++ b/korea.assembly.go.kr/485c42145f19e771f604a083b7081ecb29ae511d.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.leedandi.kr" target="_blank">http://www.leedandi.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://www.leedandi.kr" target="_blank">http://www.leedandi.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
