--- a/korea.assembly.go.kr/26929b4621f93dbed7a75030eb7e622b76aec1f6.html
+++ b/korea.assembly.go.kr/26929b4621f93dbed7a75030eb7e622b76aec1f6.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.유동수.com" target="_blank">http://www.유동수.com</a></td>
+							<td style="word-break:break-all;"><a href="http://www.유동수.com" target="_blank">http://www.유동수.com</a></td>
 						</tr>
 					</tbody>
 				</table>
