--- a/korea.assembly.go.kr/82dd70a46c7c9c135d03ea8658bc96d29646514e.html
+++ b/korea.assembly.go.kr/82dd70a46c7c9c135d03ea8658bc96d29646514e.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/way2yoo" target="_blank">http://blog.naver.com/way2yoo</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/way2yoo" target="_blank">http://blog.naver.com/way2yoo</a></td>
 						</tr>
 					</tbody>
 				</table>
