--- a/korea.assembly.go.kr/a21149303a77de12abaddc6c5b58d38588967c7f.html
+++ b/korea.assembly.go.kr/a21149303a77de12abaddc6c5b58d38588967c7f.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.yjj21.co.kr" target="_blank">http://www.yjj21.co.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://www.yjj21.co.kr" target="_blank">http://www.yjj21.co.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
