--- a/korea.assembly.go.kr/402c1fbc1c6404dec803a404693a49b010e49fe5.html
+++ b/korea.assembly.go.kr/402c1fbc1c6404dec803a404693a49b010e49fe5.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://pajulove.kr" target="_blank">http://pajulove.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://pajulove.kr" target="_blank">http://pajulove.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
