--- a/korea.assembly.go.kr/4d2d57cf38093c510ee7a182449c762c5a8b95ae.html
+++ b/korea.assembly.go.kr/4d2d57cf38093c510ee7a182449c762c5a8b95ae.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
