--- a/www.assembly.go.kr/35362cb479060d4db22c63abe306a6a5a309cea9.html
+++ b/www.assembly.go.kr/35362cb479060d4db22c63abe306a6a5a309cea9.html
@@ -67,7 +67,7 @@
 <input type="hidden" name="emp_nm" id="emp_nm" value="윤종오">
 <input type="hidden" name="dept_cd" id="dept_cd" value="9770979">
 <input type="hidden" name="dept_nm" id="dept_nm" value="국회의원 윤종오의원실">
-<input type="hidden" name="poly_nm" id="poly_nm" value="무소속">
+<input type="hidden" name="poly_nm" id="poly_nm" value="새민중정당">
 <input type="hidden" name="memnotice_yn_c" id="memnotice_yn_c" value="N">
 <input type="hidden" name="mempress_yn_c" id="mempress_yn_c" value="N">
 <input type="hidden" name="auth_lv" id="auth_lv" value="1">
@@ -165,7 +165,7 @@
 					<li class="right">
 						<dl class="pro_detail">
 							<dt>정당</dt>
-							<dd>무소속</dd>
+							<dd>새민중정당</dd>
 							<dt>선거구</dt>
 							<dd>울산 북구</dd>
 							<dt>소속위원회</dt>
