--- a/korea.assembly.go.kr/d6038b12963fd9db7dc5c4cac7948546b4f2d305.html
+++ b/korea.assembly.go.kr/d6038b12963fd9db7dc5c4cac7948546b4f2d305.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/jpyoon605" target="_blank">http://blog.naver.com/jpyoon605</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/jpyoon605" target="_blank">http://blog.naver.com/jpyoon605</a></td>
 						</tr>
 					</tbody>
 				</table>
