--- a/korea.assembly.go.kr/9a5bc67df8bd7541d22f611a028f70fa227a3b35.html
+++ b/korea.assembly.go.kr/9a5bc67df8bd7541d22f611a028f70fa227a3b35.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.shyoon.co.kr" target="_blank">http://www.shyoon.co.kr</a></td>
+							<td style="word-break:break-all;"><a href="http://www.shyoon.co.kr" target="_blank">http://www.shyoon.co.kr</a></td>
 						</tr>
 					</tbody>
 				</table>
