--- a/korea.assembly.go.kr/7494aa00b1f32ab40461629d6815d9dc472e2d23.html
+++ b/korea.assembly.go.kr/7494aa00b1f32ab40461629d6815d9dc472e2d23.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
