--- a/korea.assembly.go.kr/2d63eaee151fcc8362353cdf9d0cefca215b02a5.html
+++ b/korea.assembly.go.kr/2d63eaee151fcc8362353cdf9d0cefca215b02a5.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
