--- a/korea.assembly.go.kr/321e601b4c663949ff6e24afa97645c26d828fb0.html
+++ b/korea.assembly.go.kr/321e601b4c663949ff6e24afa97645c26d828fb0.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
