200 OK http://korea.assembly.go.kr/mem/mem_pro.jsp?mem_code=LikoDSbPbPg=

--- a/korea.assembly.go.kr/909c3336211f59165fe5be9ae704b4a1f0911a71.html
+++ b/korea.assembly.go.kr/909c3336211f59165fe5be9ae704b4a1f0911a71.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.yoush.org/" target="_blank">http://www.yoush.org/</a></td>
+							<td style="word-break:break-all;"><a href="http://www.yoush.org/" target="_blank">http://www.yoush.org/</a></td>
 						</tr>
 					</tbody>
 				</table>
