--- a/korea.assembly.go.kr/322d66bd6f4134cfd5a69058c15c977dcc747e81.html
+++ b/korea.assembly.go.kr/322d66bd6f4134cfd5a69058c15c977dcc747e81.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/winneryks" target="_blank">http://blog.naver.com/winneryks</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/winneryks" target="_blank">http://blog.naver.com/winneryks</a></td>
 						</tr>
 					</tbody>
 				</table>
