--- a/korea.assembly.go.kr/b4084a1a8e855d967fe9f9399767f349a5e9b3e5.html
+++ b/korea.assembly.go.kr/b4084a1a8e855d967fe9f9399767f349a5e9b3e5.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://www.yunsoha.kr/" target="_blank">http://www.yunsoha.kr/</a></td>
+							<td style="word-break:break-all;"><a href="http://www.yunsoha.kr/" target="_blank">http://www.yunsoha.kr/</a></td>
 						</tr>
 					</tbody>
 				</table>
