--- a/korea.assembly.go.kr/5f8312c3eb6281f8fd294841095870c400a45f21.html
+++ b/korea.assembly.go.kr/5f8312c3eb6281f8fd294841095870c400a45f21.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://yueuidong.com" target="_blank">http://yueuidong.com</a></td>
+							<td style="word-break:break-all;"><a href="http://yueuidong.com" target="_blank">http://yueuidong.com</a></td>
 						</tr>
 					</tbody>
 				</table>
