--- a/www.assembly.go.kr/781c45139bf5398baf32e6096a35bad5edcf1d28.html
+++ b/www.assembly.go.kr/781c45139bf5398baf32e6096a35bad5edcf1d28.html
@@ -169,7 +169,7 @@
 						<dl class="per_history">
 							<dt>약력</dt>
 							<dd tabindex="0">
-								&lt;주요학력&gt; <br />- 한국외국어대학교 졸업 <br />- 미국 UC San Diego 졸업<br />  태평양지역국제관계 석사 <br />(수학기간 1999. 9. ~ 2001. 6) <br /><br />&lt;주요경력&gt; <br />- 제19대, 제20대 국회의원(경기 평택시을)(現) <br />- 국회 정무위원회 법안소위위원장(現) <br />- 국회 운영위원회 위원(前) <br />- 새누리당 원내대변인(前) <br />- 새누리당 원내부대표(前)<br />- 새누리당 총선기획단 위원(前) 
+								&lt;주요학력&gt; <br />- 한국외국어대학교 졸업 <br />- 미국 UC San Diego 졸업<br />  태평양지역국제관계 석사 <br />(수학기간 1999. 9. ~ 2001. 6) <br /><br />&lt;주요경력&gt; <br />- 제19대, 제20대 국회의원(경기 평택시을)(現) <br />- 국회 정무위원회 바른정당 간사(現) <br />- 국회 정무위원회 법안소위위원장(現) <br />- 국회 헌법개정특별위원회 위원(前) 
 							</dd>
 						</dl>
 						<!-- //약력 -->
@@ -209,7 +209,7 @@
 															</dd>
 							<dt>비서</dt>
 							<dd>
-																	이윤재, 이민지, 윤효섭, 송란희, 김철규
+																	이윤재, 이민지, 윤효섭, 장소정, 송란희
 															</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
