--- a/korea.assembly.go.kr/62efd837eb2473cb8934653418120c614915b0fa.html
+++ b/korea.assembly.go.kr/62efd837eb2473cb8934653418120c614915b0fa.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="http://blog.naver.com/hjyun327" target="_blank">http://blog.naver.com/hjyun327</a></td>
+							<td style="word-break:break-all;"><a href="http://blog.naver.com/hjyun327" target="_blank">http://blog.naver.com/hjyun327</a></td>
 						</tr>
 					</tbody>
 				</table>
