--- a/korea.assembly.go.kr/c05f312756daefcd9a4f837b5fb79b6c49693a8f.html
+++ b/korea.assembly.go.kr/c05f312756daefcd9a4f837b5fb79b6c49693a8f.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
 						</tr>
 					</tbody>
 				</table>
