--- a/www.assembly.go.kr/69b519c274bf0538f23f1ac1ffd2bb8ec01b631b.html
+++ b/www.assembly.go.kr/69b519c274bf0538f23f1ac1ffd2bb8ec01b631b.html
@@ -157,7 +157,7 @@
 						<dl class="per_history">
 							<dt>약력</dt>
 							<dd tabindex="0">
-								* 학력 <br />  고려대 일반대학원 (국제정치학) 정치학 석사<br />  고려대학교 정치외교학과 졸업<br /><br />* 경력<br />   제 18대, 20대 국회의원 (서울 도봉을 / 자유한국당)<br /><br />   자유한국당 원내수석부대표<br />   자유한국당 서울시당 위원장<br />   국회운영위원회 간사<br />   정무위원회 위원<br /><br />   전 예산결산특별위원회 예산안등조정소위원회 위원<br />   전 새누리당 원내수석부대표<br />   전 새누리당 혁신비상대책위원장 비서실장<br />   전 한국다문화 청소년센터 이사장<br />   전 한국청소년활동진흥원 이사장 <br />   전 대통령비서실 정무비서관
+								* 학력 <br />  고려대 일반대학원 (국제정치학) 정치학 석사<br />  고려대학교 정치외교학과 졸업<br /><br />* 경력<br />   제 18대, 20대 국회의원 (서울 도봉을 / 자유한국당)<br /><br />   자유한국당 원내수석부대표<br />   자유한국당 서울시 당 위원장<br />   국회운영위원회 간사<br />   정무위원회 위원<br /><br />   전 예산결산특별위원회 예산안등조정소위원회 위원<br />   전 새누리당 원내수석부대표<br />   전 새누리당 혁신비상대책위원장 비서실장<br />   전 한국다문화 청소년센터 이사장<br />   전 한국청소년활동진흥원 이사장 <br />   전 대통령비서실 정무비서관
 							</dd>
 						</dl>
 						<!-- //약력 -->
@@ -199,7 +199,7 @@
 															</dd>
 							<dt>비서</dt>
 							<dd>
-																	이강주, 김호진, 양원, 나소영, 최지수
+																	이강주, 김호진, 나소영, 최지수
 															</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
