200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770625

--- a/www.assembly.go.kr/24682bca73b833d789ad2bee191eecb605fa9253.html
+++ b/www.assembly.go.kr/24682bca73b833d789ad2bee191eecb605fa9253.html
@@ -207,7 +207,7 @@
 															</dd>
 							<dt>비서관</dt>
 							<dd>
-																	김민정
+																	김민정 이한종
 															</dd>
 							<dt>비서</dt>
 							<dd>
