200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770927

--- a/www.assembly.go.kr/d7e346e704c8a6f41493de028f4f124bb61aba7d.html
+++ b/www.assembly.go.kr/d7e346e704c8a6f41493de028f4f124bb61aba7d.html
@@ -207,12 +207,8 @@
     									    																							</dd>
 							<dt>비서</dt>
 							<dd>
-								    								    									이유정
-    									    										 ,
-    									    								    									홍성일
-    									    										 ,
-    									    								    									윤하은
-    									    																							</dd>
+																	이유정, 홍성일, 윤하은, 안요섭, 김하영
+															</dd>
 							<dt>취미, 특기</dt>
 							<dd>독서, 배드민턴</dd>
 						</dl>
