200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770989

--- a/www.assembly.go.kr/1e018b592124a28432d3a5cbb4374e72dbeeec7e.html
+++ b/www.assembly.go.kr/1e018b592124a28432d3a5cbb4374e72dbeeec7e.html
@@ -201,7 +201,7 @@
 															</dd>
 							<dt>비서</dt>
 							<dd>
-																	임현종, 임상철, 유수진, 양다정
+																	임현종, 임상철, 유수진, 권하늘, 양다정
 															</dd>
 							<dt>취미, 특기</dt>
 							<dd>등산 , 테니스</dd>
