200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770920

--- a/www.assembly.go.kr/add3c32ca424543ccd1dfc32b049b46ad0a40330.html
+++ b/www.assembly.go.kr/add3c32ca424543ccd1dfc32b049b46ad0a40330.html
@@ -219,7 +219,7 @@
 															</dd>
 							<dt>비서</dt>
 							<dd>
-																	정성한, 박정은, 김진택, 서지원, 박준형
+																	임선희, 박정은, 김진택, 김시영, 이소라
 															</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
