200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770883

--- a/www.assembly.go.kr/74f89d9106f674f3479a136976691dbab942ac26.html
+++ b/www.assembly.go.kr/74f89d9106f674f3479a136976691dbab942ac26.html
@@ -208,10 +208,10 @@
 							<dt>홈페이지</dt>
 							<dd><a href="http://www.joohoyoung.or.kr" target="_blank" title="새창에서 열림">http://www.joohoyoung.or.kr</a></dd>
 							<dt>이메일</dt>
-							<dd>suseong@na.go.kr</dd>
+							<dd>7842055@naver.com</dd>
 							<dt>보좌관</dt>
 							<dd>
-																	김태훈, 손정갑
+																	우경식, 손정갑
 															</dd>
 							<dt>비서관</dt>
 							<dd>
@@ -219,7 +219,7 @@
 															</dd>
 							<dt>비서</dt>
 							<dd>
-																	정찬기, 이은정
+																	정찬기, 남길호, 이은정
 															</dd>
 							<dt>취미, 특기</dt>
 							<dd>등산</dd>
