200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771072

--- a/www.assembly.go.kr/5fc0e78c99b4e0c68a30db5c8f1ef61e58f319bc.html
+++ b/www.assembly.go.kr/5fc0e78c99b4e0c68a30db5c8f1ef61e58f319bc.html
@@ -197,7 +197,7 @@
     									    																							</dd>
 							<dt>비서관</dt>
 							<dd>
-								    								    									송지영
+								    								    									박용훈
     									    										 ,
     									    								    									이주호
     									    																							</dd>
