200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771021

--- a/www.assembly.go.kr/d7f328ac46a213ca4596ed1ec099faa752592691.html
+++ b/www.assembly.go.kr/d7f328ac46a213ca4596ed1ec099faa752592691.html
@@ -193,7 +193,7 @@
 							<dd>hwj335@hanmail.net</dd>
 							<dt>보좌관</dt>
 							<dd>
-																	윤희식 진정일
+																	김행석 진정일
 															</dd>
 							<dt>비서관</dt>
 							<dd>
