--- a/korea.assembly.go.kr/87d31f68431adf3df710c70c6f7b249f766a5ad7.html
+++ b/korea.assembly.go.kr/87d31f68431adf3df710c70c6f7b249f766a5ad7.html
@@ -49,7 +49,7 @@
 						</tr>
 						<tr>
 							<th>WEBSITE</th>
-							<td style="word-break:break-all;"><a href="" target="_blank"></a></td>
+							<td style="word-break:break-all;"><a href="100hyeryun.blog.me" target="_blank">100hyeryun.blog.me</a></td>
 						</tr>
 					</tbody>
 				</table>
