--- a/www.assembly.go.kr/93e291f8e74f2091329ac4e0cce5111c1f7a2ed4.html
+++ b/www.assembly.go.kr/93e291f8e74f2091329ac4e0cce5111c1f7a2ed4.html
@@ -219,7 +219,9 @@
     									    																							</dd>
 							<dt>비서</dt>
 							<dd>
-								    								    									임기택
+								    								    									김민주
+    									    										 ,
+    									    								    									임기택
     									    																							</dd>
 							<dt>취미, 특기</dt>
 							<dd>독서</dd>
