200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770907

--- a/www.assembly.go.kr/d3b32e44ec15474b370e594ac3f16221c9923dd7.html
+++ b/www.assembly.go.kr/d3b32e44ec15474b370e594ac3f16221c9923dd7.html
@@ -211,11 +211,11 @@
 															</dd>
 							<dt>비서관</dt>
 							<dd>
-																	김정숙,송민섭
+																	김정숙
 															</dd>
 							<dt>비서</dt>
 							<dd>
-																	송인환,김진경,황유희,송인정,장우진
+																	이승재,김진경,황유희,송인정,장우진
 															</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
