--- a/www.assembly.go.kr/096d15184e88625db3a046d5fc09446a5cadef2c.html
+++ b/www.assembly.go.kr/096d15184e88625db3a046d5fc09446a5cadef2c.html
@@ -169,7 +169,7 @@
 						<dl class="per_history">
 							<dt>약력</dt>
 							<dd tabindex="0">
-								국회 산업통상자원중소벤처기업위원회<br />더불어민주당 청년최고위원<br />전)더불어민주당 비상대책위원회 위원<br />전)웹젠 이사회 의장
+								산업통상자원중소벤처기업위원회 위원<br />더불어민주당 최고위원<br />더불어민주당 전국청년위원장<br />전)더불어민주당 비상대책위원회 위원<br />전)웹젠 이사회 의장
 							</dd>
 						</dl>
 						<!-- //약력 -->
