--- a/www.assembly.go.kr/1aaecea2875763690d7ed596847c5d8f62a6feae.html
+++ b/www.assembly.go.kr/1aaecea2875763690d7ed596847c5d8f62a6feae.html
@@ -169,7 +169,7 @@
 						<dl class="per_history">
 							<dt>약력</dt>
 							<dd tabindex="0">
-								제17,19,20대 국회의원<br /><br />현) 더불어민주당 정책위의장<br />현) 국정기획자문위원회 부위원장<br /><br />전) 국회 예산결산특별위원회 간사<br />전) 국회 교육문화체육관광위원회 간사<br />전) 국회 정치개혁특별위원회 간사<br /><br /><br /><br /><br />
+								제17,19,20대 국회의원<br /><br />현) 더불어민주당 정책위의장<br />전) 국정기획자문위원회 부위원장<br /><br />전) 국회 예산결산특별위원회 간사<br />전) 국회 교육문화체육관광위원회 간사<br />전) 국회 정치개혁특별위원회 간사<br /><br /><br /><br /><br />
 							</dd>
 						</dl>
 						<!-- //약력 -->
@@ -211,7 +211,7 @@
 															</dd>
 							<dt>비서</dt>
 							<dd>
-																	안승태, 강경훈, 배지은, 강승우, 김민성
+																	안승태, 강경훈, 배지은, 강승우, 선혜지
 															</dd>
 							<dt>취미, 특기</dt>
 							<dd>등산, 독서</dd>
