--- a/www.assembly.go.kr/ee7175b9d198af64ca29d27e86bdb1b71171fc96.html
+++ b/www.assembly.go.kr/ee7175b9d198af64ca29d27e86bdb1b71171fc96.html
@@ -213,12 +213,8 @@
     									    																							</dd>
 							<dt>비서</dt>
 							<dd>
-								    								    									김창배
-    									    										 ,
-    									    								    									이현미
-    									    										 ,
-    									    								    									정원
-    									    																							</dd>
+																	김창배, 이현미, 정원, 안교철
+															</dd>
 							<dt>취미, 특기</dt>
 							<dd>등산</dd>
 						</dl>
