--- a/www.assembly.go.kr/06b70d7472eb2f1d1e53a712823f648639f37c29.html
+++ b/www.assembly.go.kr/06b70d7472eb2f1d1e53a712823f648639f37c29.html
@@ -204,6 +204,8 @@
 								    								    									박선연
     									    										 ,
     									    								    									한진영
+    									    										 ,
+    									    								    									이나현
     									    																							</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
