200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770969

--- a/www.assembly.go.kr/bad893fdbde3c12a137a7930ef12df18d34c324b.html
+++ b/www.assembly.go.kr/bad893fdbde3c12a137a7930ef12df18d34c324b.html
@@ -201,12 +201,8 @@
     									    																							</dd>
 							<dt>비서</dt>
 							<dd>
-								    								    									하은정
-    									    										 ,
-    									    								    									임석열
-    									    										 ,
-    									    								    									김윤영
-    									    																							</dd>
+																	하은정, 임석열, 김윤영, 김윤정, 최진영
+															</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
 						</dl>
