200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771078

--- a/www.assembly.go.kr/2d3f7cea488190d78828bceda64c349063b7373a.html
+++ b/www.assembly.go.kr/2d3f7cea488190d78828bceda64c349063b7373a.html
@@ -197,11 +197,11 @@
 															</dd>
 							<dt>비서관</dt>
 							<dd>
-																	허호인
+																	허호인, 박소연
 															</dd>
 							<dt>비서</dt>
 							<dd>
-																	김양훈, 강두현, 이다경, 성정익
+																	김양훈, 강두현, 이다경, 강신형
 															</dd>
 							<dt>취미, 특기</dt>
 							<dd>마라톤</dd>
