--- a/www.assembly.go.kr/691e84bb26aa5634ecd25ef01afbcd9241ef7ba9.html
+++ b/www.assembly.go.kr/691e84bb26aa5634ecd25ef01afbcd9241ef7ba9.html
@@ -157,7 +157,7 @@
 						<dl class="per_history">
 							<dt>약력</dt>
 							<dd tabindex="0">
-								&lt;학력&gt; <br />숙명여자대학교 대학원 약학박사<br />숙명여자대학교 제약학과 학사<br />무학여자고등학교<br /><br />&lt;경력&gt;<br />현) 자유한국당 중앙여성위원장<br />현) 제20대 국회 전반기 보건복지위원회 위원<br />현) 자유한국당 재해대책특별위원회 부위원장<br />현) 국회 4차산업혁명포럼 정회원<br />현) 한일의원연맹 간사<br />현) 한국아동인구환경의원연맹 이사<br />현) 한국여성단체협의회 수석부회장<br />전) 제20대 국회 전반기 여성가족위원회 위원<br />전) 제20대 국회 남북관계개선 특별위원회 위원<br />전) 대한약사회 여약사회장<br />전) 성남시의회 의원<br />전) 제15·16대 성남시약사회 회장<br />전) 민주평화통일자문회의 자문위원<br />전) 자유한국당 재외동포위원회 수석 부위원장<br />전) 자유한국당 소상공인특별위원회 위원<br />전) 자유한국당 제19대 홍준표 대통령후보 중앙선거대책위원회 국가대개혁위원회 저출산.고령화 위원장<br />전) 자유한국당 제19대 홍준표 대통령후보 중앙선거대책위원회 직능대책위원회 제8 (보건복지)본부장<br /><br />&lt;수상&gt;<br />대한약사회 약사금장<br />NGO 모니터단 국정감사 우수국감의원상<br />제32회 전국여약사대상<br />경기약사대상<br />
+								&lt;학력&gt; <br />숙명여자대학교 대학원 약학박사<br />숙명여자대학교 제약학과 학사<br />무학여자고등학교<br /><br />&lt;경력&gt;<br />현) 제20대 국회 전반기 보건복지위원회 위원<br />현) 자유한국당 중앙여성위원장<br />현) 자유한국당 재해대책특별위원회 부위원장<br />현) 국회 4차산업혁명포럼 정회원<br />현) 한일의원연맹 간사<br />현) 한국아동인구환경의원연맹 이사<br />현) 한국여성단체협의회 수석부회장<br />전) 제20대 국회 전반기 여성가족위원회 위원<br />전) 제20대 국회 남북관계개선 특별위원회 위원<br />전) 대한약사회 여약사회장<br />전) 성남시의회 의원<br />전) 제15·16대 성남시약사회 회장<br />전) 민주평화통일자문회의 자문위원<br />전) 자유한국당 재외동포위원회 수석 부위원장<br />전) 자유한국당 소상공인특별위원회 위원<br />전) 자유한국당 제19대 홍준표 대통령후보 중앙선거대책위원회 국가대개혁위원회 저출산.고령화 위원장<br />전) 자유한국당 제19대 홍준표 대통령후보 중앙선거대책위원회 직능대책위원회 제8 (보건복지)본부장<br /><br />&lt;수상&gt;<br />대한약사회 약사금장<br />NGO 모니터단 국정감사 우수국감의원상<br />제32회 전국여약사대상<br />경기약사대상<br />
 							</dd>
 						</dl>
 						<!-- //약력 -->
@@ -195,7 +195,7 @@
 															</dd>
 							<dt>비서</dt>
 							<dd>
-																	이성훈, 황세원, 주은아, 박헌범, 허민아
+																	이성훈, 황세원, 주은아, 허민아, 이호연
 															</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
