200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770991

--- a/www.assembly.go.kr/e4d6525a599fe3eff7dc2c0d8e87126688f9e8b6.html
+++ b/www.assembly.go.kr/e4d6525a599fe3eff7dc2c0d8e87126688f9e8b6.html
@@ -207,9 +207,9 @@
     									    																							</dd>
 							<dt>비서관</dt>
 							<dd>
-								    								    									백선아
+								    								    									윤삼정
     									    										 ,
-    									    								    									윤삼정
+    									    								    									전희정
     									    																							</dd>
 							<dt>비서</dt>
 							<dd>
