--- a/www.assembly.go.kr/16497f6b1279ca1ab2e3eddaa5076254f57c3f27.html
+++ b/www.assembly.go.kr/16497f6b1279ca1ab2e3eddaa5076254f57c3f27.html
@@ -163,7 +163,7 @@
 						<dl class="per_history">
 							<dt>약력</dt>
 							<dd tabindex="0">
-								◈ 약력<br />국민의당 원내대변인(현)<br />국회 산업통상자원위원 (현)<br />제 20대 국회의원<br />국민의당 홍보위원장 (전)<br /><br />◈ 수상<br />제 20대 국회 헌정대상 수상
+								◈ 약력<br />국민의당 원내대변인(현)<br />국회 산업통상자원중소벤처기업위원 (현)<br />제 20대 국회의원<br />국민의당 홍보위원장 (전)<br /><br />◈ 수상<br />제 20대 국회 헌정대상 수상
 							</dd>
 						</dl>
 						<!-- //약력 -->
@@ -197,7 +197,7 @@
 															</dd>
 							<dt>비서관</dt>
 							<dd>
-																	박철민
+																	최은실, 전예은
 															</dd>
 							<dt>비서</dt>
 							<dd>
