200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771034

--- a/www.assembly.go.kr/19ed21a76dff9e4730a02998dbeb373001b1ce08.html
+++ b/www.assembly.go.kr/19ed21a76dff9e4730a02998dbeb373001b1ce08.html
@@ -205,7 +205,7 @@
 							<dd>
 								    								    									허성은
     									    										 ,
-    									    								    									안정욱
+    									    								    									장명숙
     									    										 ,
     									    								    									박수현
     									    																							</dd>
