200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9770386

--- a/www.assembly.go.kr/97309f75ae69267b757e8018b869a0a9e1d21c6d.html
+++ b/www.assembly.go.kr/97309f75ae69267b757e8018b869a0a9e1d21c6d.html
@@ -221,7 +221,7 @@
     									    										 ,
     									    								    									이범섭
     									    										 ,
-    									    								    									김지환
+    									    								    									유기준
     									    																							</dd>
 							<dt>취미, 특기</dt>
 							<dd>등산</dd>
