--- a/www.assembly.go.kr/8006d97abfe3cef617a7e02271f6996b81489a06.html
+++ b/www.assembly.go.kr/8006d97abfe3cef617a7e02271f6996b81489a06.html
@@ -201,24 +201,16 @@
 							<dd>baedk@na.go.kr</dd>
 							<dt>보좌관</dt>
 							<dd>
-								    								    									배창수
-    									    										 ,
-    									    								    									이준우
-    									    																							</dd>
+																	이준우, 배창수
+															</dd>
 							<dt>비서관</dt>
 							<dd>
-								    								    									변지령
-    									    										 ,
-    									    								    									서의석
-    									    																							</dd>
+																	변지령, 서의석
+															</dd>
 							<dt>비서</dt>
 							<dd>
-								    								    									이웅권
-    									    										 ,
-    									    								    									박병주
-    									    										 ,
-    									    								    									김혜진
-    									    																							</dd>
+																	이웅권, 박병주, 김혜진, 배유경, 최지현
+															</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
 						</dl>
