200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771079

--- a/www.assembly.go.kr/32547241a985c4aee3ef53e4875260edb75d3b3a.html
+++ b/www.assembly.go.kr/32547241a985c4aee3ef53e4875260edb75d3b3a.html
@@ -193,12 +193,18 @@
     									    																							</dd>
 							<dt>비서관</dt>
 							<dd>
-																	한승용, 김재협, 유광종
-															</dd>
+								    								    									유광종
+    									    										 ,
+    									    								    									한승용
+    									    																							</dd>
 							<dt>비서</dt>
 							<dd>
-																	김재영, 홍수희, 박가영, 전우주
-															</dd>
+								    								    									홍수희
+    									    										 ,
+    									    								    									김재영
+    									    										 ,
+    									    								    									박가영
+    									    																							</dd>
 							<dt>취미, 특기</dt>
 							<dd></dd>
 						</dl>
