200 OK http://www.assembly.go.kr/assm/memPop/memPopup.do?dept_cd=9771059

--- a/www.assembly.go.kr/bc90646d732627d7bc75a3276ae39bfb6b61dab1.html
+++ b/www.assembly.go.kr/bc90646d732627d7bc75a3276ae39bfb6b61dab1.html
@@ -184,7 +184,7 @@
 							<dt>홈페이지</dt>
 							<dd><a href="http://blog.naver.com/wychoi2016" target="_blank" title="새창에서 열림">http://blog.naver.com/wychoi2016</a></dd>
 							<dt>이메일</dt>
-							<dd></dd>
+							<dd>wychoi2016@naver.com</dd>
 							<dt>보좌관</dt>
 							<dd>
 								    								    									고봉준
